--- a/frontend/src/dashboard/Dashboard.css
+++ b/frontend/src/dashboard/Dashboard.css
@@ -1,9 +1,9 @@
 #DashboardContainer {
   background-color: black;
   padding: 0 !important;
+  min-height: max-content;
   color: white;
-  height: 100vh;
-  width: 100vw;
+  height: max-content;
   display: flex;
   flex-direction: column;
 }
