--- a/frontend/src/dashboard/profile/Profile.css
+++ b/frontend/src/dashboard/profile/Profile.css
@@ -1,13 +1,15 @@
 #ProfileContainer {
   display: flex;
-  justify-content: center;
-  flex-direction: column;
+  justify-content: space-around;
+  min-height: 88.7vh;
   > #CreatePostForm {
+    float: left;
     > form {
       border: 1px solid white;
       border-radius: 10px;
       padding: 1rem !important;
       display: flex;
+      flex-direction: column;
       gap: 1rem;
       > button {
         padding: 0 2.5rem !important;
