trying to implement userpost controller so that it can fetch all the post of specific user

--- a/frontend/src/dashboard/Dashboard.css
+++ b/frontend/src/dashboard/Dashboard.css
@@ -1,9 +1,10 @@
 #DashboardContainer {
   background-color: black;
   padding: 0 !important;
-  min-height: max-content;
+  min-height: 100vh;
   color: white;
   height: max-content;
   display: flex;
   flex-direction: column;
+  font-size: larger;
 }
