--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -79,12 +79,13 @@ form.login, form.signup {
 
 input {
   display: block;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   width: 100%;
-  padding: 10px 10px;
-  border: 2px solid #ddd;
+  padding: 20px 20px;
+  border: 1px solid #ddd;
   border-radius: 10px;
   background-color: #eee;
+  font-size: large;
 }
 
 button{
@@ -94,10 +95,12 @@ button{
   border-radius: 10px;
   background-color: #555;
   color: #fff;
-  padding: 10px 10px;
+  padding: 20px 20px;
   cursor: pointer;
+  font-size: large;
 }
 
 form h1{
   text-align: center;
+  font-weight: bolder;
 }
